# HW_10_WEB

./: pyproject.toml
hw_project/: db.sqlite3
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: models.py  scrap.py  urls.py  utils.py  views.py
hw_project/quotes/static/quotes/: feel_site.css
hw_project/quotes/templates/quotes/: base.html  feel_site.html  generate_quote.html  index.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: forms.py  models.py  urls.py  views.py
hw_project/users/templates/users/: login.html
hw_project/utils/: add_qoutes_to_mongo.py  migration.py
