[tool.poetry]
name = "hw-10"
version = "0.1.0"
description = ""
authors = ["Taras55001 <taras5500@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
pillow = "^10.0.0"
psycopg2-binary = "^2.9.6"
mongoengine = "^0.27.0"
scrapy = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
