[tool.poetry]
name = "hw-10"
version = "0.1.0"
description = ""
authors = ["Taras55001 <taras5500@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.0"
psycopg2-binary = "^2.9.6"
mongoengine = "^0.27.0"
scrapy = "^2.9.0"
openai = "^0.27.8"
pymongo = "^4.4.1"
django = "^4.2.3"
dnspython = "^2.4.0"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
